# stable-diffusion-webui

./: .gitignore  flake.nix  pyproject.toml  pythonSets.nix  result
nix/checks/: default.nix
nix/devShells/: default.nix
nix/devShells/stable-diffusion-webui/: default.nix
nix/lib/: default.nix
nix/nixosModules/: default.nix
